[ci skip] add exercise with ridge model bf9687207680f42f2f1904e823b357b9d8d39cf7

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07c6968c",
+   "id": "13c22ffa",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "341873ae",
+   "id": "349cb7ce",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525e0005",
+   "id": "253883c2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef253cf",
+   "id": "402a788b",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b45f55c",
+   "id": "17617811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73a64699",
+   "id": "369722ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59679a86",
+   "id": "38cacecb",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cccb4526",
+   "id": "35748073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7c86d19",
+   "id": "9e9244e0",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08e3104",
+   "id": "799522ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31767e1d",
+   "id": "bb91676a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db944402",
+   "id": "7a219a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "304d23a5",
+   "id": "12fef2cd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33668f15",
+   "id": "7a1394c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f83126d",
+   "id": "04d3ca29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "970a1a54",
+   "id": "7410b94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ebe673",
+   "id": "dd6f3384",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73659e1",
+   "id": "b894d0d4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29678d7b",
+   "id": "6fa1389b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b5ebe6",
+   "id": "0f94f2a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f6d0dc",
+   "id": "c20fb62b",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37292c0",
+   "id": "72e9eab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e46b75a",
+   "id": "f93e4549",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a50a6a",
+   "id": "f18e2669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96a45d1",
+   "id": "618fdee2",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28622f72",
+   "id": "fd1a258a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b67f3a4e",
+   "id": "6ed46f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e145f13b",
+   "id": "b89bedc5",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e4d7b0",
+   "id": "01cfbf1c",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c3874d",
+   "id": "f0eded27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,6 +589,7 @@
     "prediction_end_time = skrub.var(\n",
     "    \"prediction_end_time\", historical_data_end_time.skb.eval() - pl.duration(hours=24)\n",
     ")\n",
+    "\n",
     "\n",
     "@skrub.deferred\n",
     "def define_prediction_time_range(prediction_start_time, prediction_end_time):\n",
@@ -601,14 +602,17 @@
     "        ).alias(\"prediction_time\"),\n",
     "    )\n",
     "\n",
-    "prediction_time = define_prediction_time_range(prediction_start_time, prediction_end_time)\n",
+    "\n",
+    "prediction_time = define_prediction_time_range(\n",
+    "    prediction_start_time, prediction_end_time\n",
+    ")\n",
     "prediction_time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e0982ef",
+   "id": "fb8c489b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a99bcc",
+   "id": "cf1dd197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971888e5",
+   "id": "dc610297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f2d54b",
+   "id": "1ae39f42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +717,7 @@
     "import skrub.selectors as s\n",
     "\n",
     "\n",
-    "predictions = features.skb.apply(\n",
+    "features_with_dropped_cols = features.skb.apply(\n",
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
@@ -733,7 +737,9 @@
     "            name=\"dropped_cols\",\n",
     "        )\n",
     "    )\n",
-    ").skb.apply(\n",
+    ")\n",
+    "\n",
+    "predictions = features_with_dropped_cols.skb.apply(\n",
     "    HistGradientBoostingRegressor(\n",
     "        random_state=0,\n",
     "        loss=skrub.choose_from([\"squared_error\", \"poisson\", \"gamma\"], name=\"loss\"),\n",
@@ -752,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96898a0",
+   "id": "44152e3e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -780,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23242df5",
+   "id": "fb732682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f1f239",
+   "id": "49b92b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d58118",
+   "id": "a6c26c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "677ed314",
+   "id": "a7a9268e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0048765",
+   "id": "fa7417a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,6 +992,22 @@
     "        )\n",
     "    )\n",
     "\n",
+    "    model_chart = (\n",
+    "        altair.Chart(results)\n",
+    "        .mark_line(strokeDash=[4, 2, 4, 2], opacity=0.8, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\n",
+    "                \"model_label:N\", legend=altair.Legend(title=\"Models\"), sort=None\n",
+    "            ),\n",
+    "            detail=\"cv_idx:N\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "    diagonal_chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
@@ -1003,21 +1025,9 @@
     "                title=\"Fraction of observations sorted by predicted label\",\n",
     "            ),\n",
     "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
-    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    model_chart = (\n",
-    "        altair.Chart(results)\n",
-    "        .mark_line(opacity=0.3, tooltip=True)\n",
-    "        .encode(\n",
-    "            x=altair.X(\n",
-    "                \"cum_population:Q\",\n",
-    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            color=altair.Color(\n",
+    "                \"model_label:N\", legend=altair.Legend(title=\"Models\"), sort=None\n",
     "            ),\n",
-    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
-    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
-    "            detail=\"cv_idx:N\",\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -1030,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d378e43",
+   "id": "092ee156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6965421a",
+   "id": "7d68f89e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,10 +1207,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7794de",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "92a819da",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_residuals_by_month(cv_predictions):\n",
@@ -1282,17 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7de1a8d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16dbe270",
+   "id": "dcab9b80",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1314,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2f02ae",
+   "id": "d1c746ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8bda9f4",
+   "id": "4f93c800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99be507c",
+   "id": "e5388c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92adaed0",
+   "id": "d37dfa1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,23 +1369,153 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0589bdad",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "f27dec25",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# from joblib import Parallel, delayed\n",
+    "# TODO: Exercise applying a a linear model with some additional feature engineering\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.kernel_approximation import Nystroem\n",
     "\n",
-    "# cv_predictions = []\n",
-    "# for ts_cv_train_idx, ts_cv_test_idx in ts_cv_5.split(prediction_time.skb.eval()):\n",
-    "#     features[ts_cv_train_idx].fit"
+    "model = skrub.tabular_learner(\n",
+    "    estimator=Ridge(alpha=skrub.choose_float(1e-6, 1e6, log=True, default=1e-3))\n",
+    ")\n",
+    "model.steps.insert(\n",
+    "    -1,\n",
+    "    (\n",
+    "        \"nystroem\",\n",
+    "        Nystroem(n_components=skrub.choose_int(10, 200, log=True, default=150)),\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "predictions_ridge = features_with_dropped_cols.skb.apply(model, y=target)\n",
+    "predictions_ridge"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6322b074",
+   "id": "0f52e3c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            targets.skb.eval(),\n",
+    "            predictions_ridge.rename(\n",
+    "                {target_column_name: predicted_target_column_name}\n",
+    "            ).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(24 * 7)\n",
+    ").transform_fold(\n",
+    "    [target_column_name, predicted_target_column_name],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbfb7aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_cv_2 = TimeSeriesSplit(\n",
+    "    n_splits=2, test_size=test_size, max_train_size=max_train_size, gap=24\n",
+    ")\n",
+    "randomized_search = predictions_ridge.skb.get_randomized_search(\n",
+    "    cv=ts_cv_2,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=100,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c900a51f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randomized_search.plot_results().update_layout(margin=dict(l=200))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa4b5a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions_ridge.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0961f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94871cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_predictions_ridge = collect_cv_predictions(\n",
+    "    nested_cv_results[\"pipeline\"], ts_cv_5, predictions_ridge, prediction_time\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6f5c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_lorenz_curve(cv_predictions_ridge, n_samples=500).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6bcff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_reliability_diagram(cv_predictions_ridge).interactive().properties(\n",
+    "    title=\"Reliability diagram from cross-validation predictions\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e982b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,11 +1529,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ec8bda",
+   "id": "43b09cf7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "multioutput_predictions = features.skb.apply(\n",
+    "multioutput_predictions = features_with_dropped_cols.skb.apply(\n",
     "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
     ").skb.set_name(\"multioutput_gbdt\")"
    ]
@@ -1413,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5aad2a",
+   "id": "90986db2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e70c9c3",
+   "id": "16030379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dd42d01",
+   "id": "4f582bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7ae6b5",
+   "id": "04e2d519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6ac690",
+   "id": "c14034c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9de7bf4",
+   "id": "03ca4850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95dc7db9",
+   "id": "90b20d40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dce4cf69",
+   "id": "9eaa3fa7",
    "metadata": {},
    "outputs": [],
    "source": []
