--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38695254",
+   "id": "66a55176",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4b5fd0",
+   "id": "89898b51",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfcf4db4",
+   "id": "2b96f623",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "922b05b7",
+   "id": "97796485",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6397c19b",
+   "id": "6221d445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a465007b",
+   "id": "e59c1425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccffe47",
+   "id": "17138d8d",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d12e72",
+   "id": "1ff25d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97695524",
+   "id": "124b587d",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "948c9e5c",
+   "id": "6225f1d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66962726",
+   "id": "9abf845d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a620f6b",
+   "id": "2c12ff8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee6b7ce",
+   "id": "813cd5dd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22545d4a",
+   "id": "64f7f28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcecfe29",
+   "id": "cd06a770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa27e74",
+   "id": "64002392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c35ce8",
+   "id": "b3c3f8cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe7d189",
+   "id": "3f23a39b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5399266",
+   "id": "59aa959e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01abecfa",
+   "id": "659dfc02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca770537",
+   "id": "ddcc8ac9",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc900a2",
+   "id": "6abf9d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b42bcb5",
+   "id": "526b17e0",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8f9cdbb",
+   "id": "8d44c728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6a8280",
+   "id": "929bd58a",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb073a7",
+   "id": "46433d22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6fd05e",
+   "id": "a4facce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5907e565",
+   "id": "26d090a1",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2ee57f",
+   "id": "8017f7f4",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c1f7a8",
+   "id": "30e1db15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,6 +589,7 @@
     "prediction_end_time = skrub.var(\n",
     "    \"prediction_end_time\", historical_data_end_time.skb.eval() - pl.duration(hours=24)\n",
     ")\n",
+    "\n",
     "\n",
     "@skrub.deferred\n",
     "def define_prediction_time_range(prediction_start_time, prediction_end_time):\n",
@@ -601,14 +602,17 @@
     "        ).alias(\"prediction_time\"),\n",
     "    )\n",
     "\n",
-    "prediction_time = define_prediction_time_range(prediction_start_time, prediction_end_time)\n",
+    "\n",
+    "prediction_time = define_prediction_time_range(\n",
+    "    prediction_start_time, prediction_end_time\n",
+    ")\n",
     "prediction_time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a061d7",
+   "id": "5866cbab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfbc72ba",
+   "id": "2e5814d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ffce3b6",
+   "id": "5e649e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff4934b",
+   "id": "56240fd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +717,7 @@
     "import skrub.selectors as s\n",
     "\n",
     "\n",
-    "predictions = features.skb.apply(\n",
+    "features_with_dropped_cols = features.skb.apply(\n",
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
@@ -733,7 +737,9 @@
     "            name=\"dropped_cols\",\n",
     "        )\n",
     "    )\n",
-    ").skb.apply(\n",
+    ")\n",
+    "\n",
+    "predictions = features_with_dropped_cols.skb.apply(\n",
     "    HistGradientBoostingRegressor(\n",
     "        random_state=0,\n",
     "        loss=skrub.choose_from([\"squared_error\", \"poisson\", \"gamma\"], name=\"loss\"),\n",
@@ -752,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bbf1a31",
+   "id": "a45dba54",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -780,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "245b85b6",
+   "id": "5b83c36c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550e9100",
+   "id": "7d2dfeb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2dcdf8",
+   "id": "0f1dc92d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f664fc16",
+   "id": "f333fe54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0def0e3",
+   "id": "59fa3232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,6 +992,22 @@
     "        )\n",
     "    )\n",
     "\n",
+    "    model_chart = (\n",
+    "        altair.Chart(results)\n",
+    "        .mark_line(strokeDash=[4, 2, 4, 2], opacity=0.8, tooltip=True)\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"cum_population:Q\",\n",
+    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            ),\n",
+    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
+    "            color=altair.Color(\n",
+    "                \"model_label:N\", legend=altair.Legend(title=\"Models\"), sort=None\n",
+    "            ),\n",
+    "            detail=\"cv_idx:N\",\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "    diagonal_chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
@@ -1003,21 +1025,9 @@
     "                title=\"Fraction of observations sorted by predicted label\",\n",
     "            ),\n",
     "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
-    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    model_chart = (\n",
-    "        altair.Chart(results)\n",
-    "        .mark_line(opacity=0.3, tooltip=True)\n",
-    "        .encode(\n",
-    "            x=altair.X(\n",
-    "                \"cum_population:Q\",\n",
-    "                title=\"Fraction of observations sorted by predicted label\",\n",
+    "            color=altair.Color(\n",
+    "                \"model_label:N\", legend=altair.Legend(title=\"Models\"), sort=None\n",
     "            ),\n",
-    "            y=altair.Y(\"cum_observed:Q\", title=\"Cumulative observed load proportion\"),\n",
-    "            color=altair.Color(\"model_label:N\", legend=altair.Legend(title=\"Models\")),\n",
-    "            detail=\"cv_idx:N\",\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -1030,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffaa8991",
+   "id": "3059b87b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6af1749",
+   "id": "7db8d51c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,10 +1207,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187150d1",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "9c4f1e00",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_residuals_by_month(cv_predictions):\n",
@@ -1282,17 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcfad599",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f29c352",
+   "id": "47186b98",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1314,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed064fba",
+   "id": "1bd08120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb298c7",
+   "id": "19505bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7874d5f",
+   "id": "d89d1d77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f891f167",
+   "id": "1fec554e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,23 +1369,153 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575b56c5",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "4cbb81e4",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# from joblib import Parallel, delayed\n",
+    "# TODO: Exercise applying a a linear model with some additional feature engineering\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.kernel_approximation import Nystroem\n",
     "\n",
-    "# cv_predictions = []\n",
-    "# for ts_cv_train_idx, ts_cv_test_idx in ts_cv_5.split(prediction_time.skb.eval()):\n",
-    "#     features[ts_cv_train_idx].fit"
+    "model = skrub.tabular_learner(\n",
+    "    estimator=Ridge(alpha=skrub.choose_float(1e-6, 1e6, log=True, default=1e-3))\n",
+    ")\n",
+    "model.steps.insert(\n",
+    "    -1,\n",
+    "    (\n",
+    "        \"nystroem\",\n",
+    "        Nystroem(n_components=skrub.choose_int(10, 200, log=True, default=150)),\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "predictions_ridge = features_with_dropped_cols.skb.apply(model, y=target)\n",
+    "predictions_ridge"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b34319e",
+   "id": "b5f67723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "altair.Chart(\n",
+    "    pl.concat(\n",
+    "        [\n",
+    "            targets.skb.eval(),\n",
+    "            predictions_ridge.rename(\n",
+    "                {target_column_name: predicted_target_column_name}\n",
+    "            ).skb.eval(),\n",
+    "        ],\n",
+    "        how=\"horizontal\",\n",
+    "    ).tail(24 * 7)\n",
+    ").transform_fold(\n",
+    "    [target_column_name, predicted_target_column_name],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f808698c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_cv_2 = TimeSeriesSplit(\n",
+    "    n_splits=2, test_size=test_size, max_train_size=max_train_size, gap=24\n",
+    ")\n",
+    "randomized_search = predictions_ridge.skb.get_randomized_search(\n",
+    "    cv=ts_cv_2,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=100,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4ad31f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randomized_search.plot_results().update_layout(margin=dict(l=200))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a587ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions_ridge.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "753a1525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3afc84c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_predictions_ridge = collect_cv_predictions(\n",
+    "    nested_cv_results[\"pipeline\"], ts_cv_5, predictions_ridge, prediction_time\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b24fc127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_lorenz_curve(cv_predictions_ridge, n_samples=500).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f2746d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_reliability_diagram(cv_predictions_ridge).interactive().properties(\n",
+    "    title=\"Reliability diagram from cross-validation predictions\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "807e715f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,11 +1529,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a799f5",
+   "id": "523339fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "multioutput_predictions = features.skb.apply(\n",
+    "multioutput_predictions = features_with_dropped_cols.skb.apply(\n",
     "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
     ").skb.set_name(\"multioutput_gbdt\")"
    ]
@@ -1413,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3474fe7e",
+   "id": "72c03011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8da4fb8",
+   "id": "c55afc82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c868cf7",
+   "id": "ecd2e19e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03cdbc34",
+   "id": "e51694a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2541eb",
+   "id": "91f8c507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd62e9d",
+   "id": "d1d69bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7b0d31",
+   "id": "7234cf08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5da38a72",
+   "id": "05721da1",
    "metadata": {},
    "outputs": [],
    "source": []
